@@ -1,0 +1,1 @@
+.so pmemobj_open.3
