@@ -11,6 +11,7 @@ LIBPMEMOBJ_1.0 {
 		pmemobj_errormsg;
 		pmemobj_create;
 		pmemobj_open;
+		pmemobj_xopen;
 		pmemobj_close;
 		pmemobj_check;
 		pmemobj_ctl_exec;
