@@ -108,6 +108,7 @@ pmemobj_volatile$(nW)
 pmemobj_wcsdup$(nW)
 pmemobj_xalloc$(nW)
 pmemobj_xflush$(nW)
+pmemobj_xopen$(nW)
 pmemobj_xpersist$(nW)
 pmemobj_xreserve$(nW)
 pmemobj_zalloc$(nW)
